@@ -1,6 +1,6 @@
 #!/usr/bin/r -t
 #
-# Copyright (C) 2010 - 2012  John Chambers, Dirk Eddelbuettel and Romain Francois
+# Copyright (C) 2010 - 2013  John Chambers, Dirk Eddelbuettel and Romain Francois
 #
 # This file is part of Rcpp.
 #
@@ -21,65 +21,25 @@
 
 if (.runThisTest) {
 
-    test.modRef <- function() {
-        inc  <- '
+.setUp <- Rcpp:::unit_test_setup( "modref.cpp" )     
+    
+test.modRef <- function() {
+    ww = new(World)
+    wg = World$new()
+    
+    checkEquals(ww$greet(), wg$greet())
+    wgg <- wg$greet()
+    
+    ww$set("Other")
+    
+    ## test independence of ww, wg
+    checkEquals(ww$greet(), "Other")
+    checkEquals(wg$greet(), wgg)
+    
+    World$methods(twice = function() paste(greet(), greet()))
+    
+    checkEquals(ww$twice(), paste(ww$greet(), ww$greet()))
 
-	class World {
-	public:
-	    World() : foo(1), msg("hello") {}
-	    void set(std::string msg_) { this->msg = msg_; }
-	    std::string greet() { return msg; }
+}
 
-	    int foo ;
-	    double bar ;
-
-	private:
-	    std::string msg;
-	};
-
-	void clearWorld( World* w ){
-		w->set( "" );
-	}
-
-	RCPP_MODULE(yada){
-		using namespace Rcpp ;
-
-		class_<World>( "World" )
-
-		    .default_constructor()
-
-			.method( "greet", &World::greet )
-			.method( "set", &World::set )
-			.method( "clear", &clearWorld )
-
-			.field( "foo", &World::foo )
-			.field_readonly( "bar", &World::bar )
-		;
-
-	}
-
-	'
-        fx <- inline::cxxfunction( signature(), "" , include = inc, plugin = "Rcpp" )
-
-        mod <- Module( "yada", getDynLib(fx) )
-
-        World <- mod$World
-
-        ww = new(World)
-        wg = World$new()
-
-        checkEquals(ww$greet(), wg$greet())
-        wgg <- wg$greet()
-
-        ww$set("Other")
-
-        ## test independence of ww, wg
-        checkEquals(ww$greet(), "Other")
-        checkEquals(wg$greet(), wgg)
-
-        World$methods(twice = function() paste(greet(), greet()))
-
-        checkEquals(ww$twice(), paste(ww$greet(), ww$greet()))
-
-    }
 }
